--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     />
 
     <!-- custome css file link -->
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!--header section-->
