--- a/mobile-index.html
+++ b/mobile-index.html
@@ -40,6 +40,8 @@
       </nav>
     </header>
     <img src="img/topimg.jpg" class="nav-img" />
+
+    <!--welcome section-->
     <section class="welcome">
       <h1>Welcome Tam Le,</h1>
       <p>Stay connect, feel like home</p>
@@ -48,7 +50,6 @@
           <i class="fa-solid fa-hamburger"></i>
           Food & Beverage
         </div>
-
         <div class="service">
           <i class="fa-solid fa-bell-concierge"></i>Services & Amenities
         </div>
