--- a/mobile-index.html
+++ b/mobile-index.html
@@ -57,7 +57,7 @@
           <i class="fa-solid fa-question"></i>Help & Support
         </div>
         <div class="history">
-          <i class="fa-solid fa-clock-rotate-left"></i>History
+          <i class="fa-solid fa-clock-rotate-left"></i>History<br />&nbsp;
         </div>
       </div>
     </section>
