--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
       </nav>
     </header>
     <img src="img/topimg.jpg" class="nav-img" />
+
+    <!--welcome section-->
     <section class="welcome">
       <h1>Welcome Tam Le,</h1>
       <p>Stay connect, feel like home</p>
@@ -59,6 +61,12 @@
           <i class="fa-solid fa-clock-rotate-left"></i>History
         </div>
       </div>
+    </section>
+
+    <!--just for you-->
+    <section class="for-u">
+      <div class="h1-foru-container"><h1>Just for you</h1></div>
+      <p>View all ></p>
     </section>
     <!-- custome js file link -->
     <script src="main.js"></script>
