--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 
     <!--just for you-->
     <section class="for-u">
-      <div class="h1-foru-container"><h1>Just for you</h1></div>
+      <div class="h1-foru-container">
+        <h1>Just <br />For You</h1>
+      </div>
       <p>View all ></p>
     </section>
     <!-- custome js file link -->
