--- a/mobile-index.html
+++ b/mobile-index.html
@@ -47,7 +47,7 @@
       <p>Stay connect, feel like home</p>
       <div class="wel-container">
         <div class="food">
-          <i class="fa-solid fa-hamburger"></i>
+          <i class="fa-solid fa-utensils"></i>
           Food & Beverage
         </div>
         <div class="service">
@@ -57,7 +57,7 @@
           <i class="fa-solid fa-question"></i>Help & Support
         </div>
         <div class="history">
-          <i class="fa-solid fa-clock-rotate-left"></i>History<br />&nbsp;
+          <i class="fa-solid fa-clock-rotate-left"></i>History
         </div>
       </div>
     </section>
