--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
       <nav class="navbar">
         <a href="#checkin">Check in</a>
         <a href="#specialoffers">Special Offers</a>
-        <a href="#featuredestinations" class="featuredestinations"
+        <a href="#featuredestinations" class="featuredestinations lg-view"
           >Featured Destinations</a
         >
         <a href="#justforyou">Just For You</a>
         <a
           href="#becomeahost"
-          class="btn navbtn"
+          class="btn navbtn lg-view"
           style="color: #fff; font-size: 14px"
           >Become A Host</a
         >
         <a href="#login" class="login">Login</a>
       </nav>
     </header>
-    <img src="img/topimg.jpg" class="nav-img" />
+    <img src="img/topimg.jpg" class="nav-img lg-view" />
 
     <!--welcome section-->
     <section class="welcome">
@@ -66,7 +66,7 @@
         <div class="h1-foru-container">
           <h1 class="lg-view">Just <br />For You</h1>
           <h1 class="sm-view">Just For You</h1>
-          <div class="underline"></div>
+          <div class="underline lg-view"></div>
         </div>
         <p>View all ></p>
       </div>
