--- a/index.html
+++ b/index.html
@@ -252,6 +252,89 @@
         </div>
       </div>
     </section>
+
+    <!--newsletter-->
+    <div class="newsletter-box lg-view">
+      <div class="content">
+        <h3>NEWSLETTER</h3>
+        <p>Stay Up to Date</p>
+      </div>
+
+      <form action="">
+        <input type="email" placeholder="      Your Email..." />
+        <input type="submit" value="✉" />
+      </form>
+    </div>
+
+    <!--footer-->
+    <section class="footer lg-view">
+      <div class="box-container">
+        <div class="box head">
+          <h3 class="logo">CiTravel</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam natus
+            asperiores voluptas aliquam vitae odio. Beatae doloribus facere
+            nostrum magni.
+          </p>
+
+          <div class="btn-container">
+            <a class="btn" href="#">
+              <h3>
+                <i class="fab fa-google-play"></i> &nbsp;&nbsp;&nbsp;Play Store
+              </h3>
+            </a>
+
+            <a class="btn" href="#">
+              <h3>
+                <i class="fab fa-app-store"></i> &nbsp;&nbsp;&nbsp;App Store
+              </h3>
+            </a>
+          </div>
+        </div>
+
+        <div class="box">
+          <h3>COMPANY</h3>
+          <a href="#">About Us</a>
+          <a href="#">Legal Information</a>
+          <a href="#">Contact Us</a>
+          <a href="#">Blogs</a>
+        </div>
+
+        <div class="box">
+          <h3>HELP CENTER</h3>
+          <a href="#">Find a Property</a>
+          <a href="#">How To Host?</a>
+          <a href="#">Why Us?</a>
+          <a href="#">FAQs</a>
+          <a href="#">Rental Guides</a>
+        </div>
+
+        <div class="box">
+          <h3>CONTACT INFO</h3>
+          <a>Phone: 1234567890</a>
+          <a>Email: company@email.com</a>
+          <a>Location: Ho Chi Minh City</a>
+
+          <div class="social">
+            <a href="#"
+              ><i class="fa-brands fa-facebook-square"></i>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a
+            >
+            <a href="#"
+              ><i class="fa-brands fa-twitter"></i
+              >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a
+            >
+            <a href="#"
+              ><i class="fa-brands fa-instagram"></i
+              >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a
+            >
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          </div>
+        </div>
+      </div>
+
+      <h1 class="credit">&#169; 2022 CiTravel | All rights reserved</h1>
+    </section>
     <!-- custome js file link -->
     <script src="main.js"></script>
   </body>
