--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
           >Become A Host</a
         >
         <a href="#login" class="login">Login</a>
+
+        <div class="social sm-view">
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
       </nav>
     </header>
     <img src="img/topimg.jpg" class="nav-img lg-view" />
