--- a/search-res.html
+++ b/search-res.html
@@ -20,6 +20,7 @@
       <div id="menu-bar" class="fas fa-bars"></div>
       <a href="#" class="logo">CiTravel</a>
       <nav class="navbar">
+        <a href="#" class="logonav .active">CiTravel</a>
         <a href="search-res.html">Check in</a>
         <a href="#specialoffers">Special Offers</a>
         <a href="#justforyou">Just For You</a>
@@ -78,6 +79,7 @@
         </form>
       </div>
 
+      <!--Just For You-->
       <div class="justforu">
         <div class="title">
           <h2>Just For You</h2>
