--- a/search-res.html
+++ b/search-res.html
@@ -20,7 +20,7 @@
       <div id="menu-bar" class="fas fa-bars"></div>
       <a href="#" class="logo">CiTravel</a>
       <nav class="navbar">
-        <a href="#" class="logonav .active">CiTravel</a>
+        <a href="#" class="logonav">CiTravel</a>
         <a href="search-res.html">Check in</a>
         <a href="#specialoffers">Special Offers</a>
         <a href="#justforyou">Just For You</a>
