--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <div id="menu-bar" class="fas fa-bars"></div>
       <a href="#" class="logo">CiTravel</a>
       <nav class="navbar">
+        <a href="#" class="logonav sm-view">CiTravel</a>
         <a class="lg-view" href="#checkin">Check in</a>
         <a class="sm-view" href="search-res.html">Check in</a>
         <a href="#specialoffers">Special Offers</a>
@@ -68,6 +69,7 @@
                 type="search"
                 id="reservation"
                 placeholder="Type your Itinerary or Confirmation"
+                required
               />
             </div>
           </div>
@@ -78,6 +80,7 @@
               type="username"
               id="firstname"
               placeholder="Type first name"
+              required
             />
           </div>
 
@@ -316,7 +319,7 @@
 
       <form action="">
         <div class="email-input">
-          <input type="email" placeholder="Your Email..." />
+          <input type="email" placeholder="Your Email..." required />
           <input type="submit" value="✉" />
         </div>
       </form>
