--- a/search-res.html
+++ b/search-res.html
@@ -18,9 +18,9 @@
     <!--header section-->
     <header>
       <div id="menu-bar" class="fas fa-bars"></div>
-      <a href="#" class="logo">CiTravel</a>
+      <a href="index.html" class="logo">CiTravel</a>
       <nav class="navbar">
-        <a href="#" class="logonav">CiTravel</a>
+        <a href="index.html" class="logonav">CiTravel</a>
         <a href="search-res.html">Check in</a>
         <a href="#specialoffers">Special Offers</a>
         <a href="#justforyou">Just For You</a>
@@ -56,6 +56,7 @@
               type="search"
               id="reservation"
               placeholder="Type your Itinerary or Confirmation"
+              required
             />
           </div>
 
@@ -65,6 +66,7 @@
               type="username"
               id="firstname"
               placeholder="Type first name"
+              required
             />
           </div>
 
