--- a/search-res.html
+++ b/search-res.html
@@ -70,7 +70,7 @@
             />
           </div>
 
-          <a class="btn" href="#">
+          <a class="btn" href="javascript:void(0)" onclick="getResData()">
             <p>Search</p>
           </a>
 
