--- a/search-res.html
+++ b/search-res.html
@@ -70,6 +70,8 @@
             />
           </div>
 
+          <pre id="popup"></pre>
+
           <a class="btn" href="javascript:void(0)" onclick="getResData()">
             <p>Search</p>
           </a>
