--- a/search-res.html
+++ b/search-res.html
@@ -72,7 +72,7 @@
 
           <pre id="popup"></pre>
 
-          <a class="btn" href="javascript:void(0)" onclick="getResData()">
+          <a class="btn" id="search-btn" onclick="getResData()">
             <p>Search</p>
           </a>
 
