--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@
           </div>
 
           <div class="bg-search-btn">
-            <div class="search-btn">
-              <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-            </div>
+            <a class="btn" id="search-btn" onclick="getResData()">
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </a>
           </div>
         </form>
+        <pre id="popup"></pre>
       </div>
     </div>
 
