--- a/search-res.html
+++ b/search-res.html
@@ -113,6 +113,8 @@
       </div>
     </section>
 
+    <!--Security Verification-->
+    <section class="otp"></section>
     <!-- custome js file link -->
     <script src="main.js"></script>
   </body>
