--- a/search-res.html
+++ b/search-res.html
@@ -152,7 +152,7 @@
           </div>
         </div>
 
-        <pre id="popupotp"></pre>
+        <pre id="popupotp">&nbsp;<br/>&nbsp;</pre>
 
         <button
           class="btn"
