--- a/search-res.html
+++ b/search-res.html
@@ -70,7 +70,7 @@
             />
           </div>
 
-          <pre id="popup"></pre>
+          <pre id="popup">&nbsp;<br/>&nbsp;</pre>
 
           <a class="btn" id="search-btn" onclick="getResData()">
             <p>Search</p>
