--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
     <!--header section-->
     <header>
       <div id="menu-bar" class="fas fa-bars"></div>
-      <a href="#" class="logo">CiTravel</a>
+      <a href="#" class="logo">
+        <img src="img/logo.jpg" class="sm-view" />CiTravel</a
+      >
       <nav class="navbar">
-        <a href="#" class="logonav sm-view">CiTravel</a>
+        <a href="#" class="logonav sm-view"
+          ><img src="img/logonav.jpg" />CiTravel</a
+        >
         <a class="lg-view" href="#checkin">Check in</a>
         <a class="sm-view" href="search-res.html">Check in</a>
         <a href="#specialoffers">Special Offers</a>
