--- a/search-res.html
+++ b/search-res.html
@@ -18,9 +18,14 @@
     <!--header section-->
     <header>
       <div id="menu-bar" class="fas fa-bars"></div>
-      <a href="index.html" class="logo">CiTravel</a>
+      <a href="index.html" class="logo">
+        <img src="img/logo.jpg" />
+        CiTravel
+      </a>
       <nav class="navbar">
-        <a href="index.html" class="logonav">CiTravel</a>
+        <a href="index.html" class="logonav">
+          <img src="img/logonav.jpg" />CiTravel</a
+        >
         <a href="search-res.html">Check in</a>
         <a href="#specialoffers">Special Offers</a>
         <a href="#justforyou">Just For You</a>
