--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <!--header section-->
     <header>
-      <div id="menu-bar" class="fas fa-bars"></div>
+      <div id="menu-bar" class="fas fa-book-atlas"></div>
       <a href="#" class="logo">
         <img src="img/logo.jpg" class="sm-view" />CiTravel</a
       >
@@ -46,6 +46,9 @@
           <a href="#"><i class="fa-brands fa-linkedin"></i></a>
         </div>
       </nav>
+      <i
+        class="sm-view fa-solid fa-person-walking-luggage fa-flip-horizontal account_settings"
+      ></i>
     </header>
 
     <!--Search Reservation-->
