--- a/search-res.html
+++ b/search-res.html
@@ -17,7 +17,7 @@
   <body>
     <!--header section-->
     <header>
-      <div id="menu-bar" class="fas fa-bars"></div>
+      <div id="menu-bar" class="fas fa-book-atlas"></div>
       <a href="index.html" class="logo">
         <img src="img/logo.jpg" />
         CiTravel
@@ -36,6 +36,9 @@
           <a href="#"><i class="fa-brands fa-linkedin"></i></a>
         </div>
       </nav>
+      <i
+        class="fa-solid fa-person-walking-luggage fa-flip-horizontal account_settings"
+      ></i>
     </header>
 
     <!--Page Title-->
