--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <!--header section-->
     <header>
-      <div id="menu-bar" class="fas fa-book-atlas"></div>
+      <div id="menu-bar" class="fas fa-person-walking-luggage"></div>
       <a href="#" class="logo">
         <img src="img/logo.jpg" class="sm-view" />CiTravel</a
       >
@@ -47,7 +47,7 @@
         </div>
       </nav>
       <i
-        class="sm-view fa-solid fa-person-walking-luggage fa-flip-horizontal account_settings"
+        class="sm-view fa-solid fa-book-atlas fa-flip-horizontal account_settings"
       ></i>
     </header>
 
