--- a/select-checkin.html
+++ b/select-checkin.html
@@ -44,46 +44,7 @@
     <!--Page Title-->
     <h1 class="pagetitle">Online check in</h1>
 
-    <!--Image-->
-    <img src="img/16.jpg" class="img_title" />
-
-    <!--Reservation-->
-    <section class="title">
-      <h2>Grand Deluxe Suite</h2>
-      <p>3 nights</p>
-    </section>
-    <p class="location">
-      <i class="fa-solid fa-location-dot"></i>&nbsp;&nbsp;Discovery Wondersworld
-      Phu Quoc
-    </p>
-
-    <!--Info-->
-    <section class="info">
-      <div class="arrival">
-        <h3>Arrival</h3>
-        <p>Wed, 08 Jun 2022</p>
-      </div>
-      <div class="departure">
-        <h3>Departure</h3>
-        <p>Sat, 11 Jun 2022</p>
-      </div>
-      <div class="guest">
-        <h3>Guest</h3>
-        <p>3 Adults</p>
-      </div>
-      <div class="status">
-        <h3>Status</h3>
-        <div class="reserved"><p>Reserved</p></div>
-      </div>
-    </section>
-
-    <!--Button-->
-    <section>
-      <a href="select-checkin.html"
-        ><button class="checkin_btn">Check in online</button></a
-      >
-    </section>
     <!-- custome js file link -->
-    <script src="checkin.js"></script>
+    <script src="select-checkin.js"></script>
   </body>
 </html>
