--- a/search-res.html
+++ b/search-res.html
@@ -122,7 +122,7 @@
     <!--Secure Verification-->
     <iframe name="dummyframe" id="dummyframe" style="display: none"></iframe>
     <div class="otp">
-      <form action="checkin.html" id="otp_form">
+      <form action="" target="dummyframe" id="otp_form">
         <h2>Secure Verification</h2>
         <label for="email_input">Email verification code</label>
         <div class="email-otp input-container">
