--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <!--header section-->
     <header>
-      <div id="menu-bar" class="fas fa-person-walking-luggage"></div>
+      <div id="menu-bar" class="fas fa-bars"></div>
       <a href="#" class="logo">
         <img src="img/logo.jpg" class="sm-view" />CiTravel</a
       >
