--- a/search-res.html
+++ b/search-res.html
@@ -17,7 +17,7 @@
   <body>
     <!--header section-->
     <header>
-      <div id="menu-bar" class="fas fa-person-walking-luggage"></div>
+      <div id="menu-bar" class="fas fa-bars"></div>
       <a href="index.html" class="logo">
         <img src="img/logo.jpg" />
         CiTravel
@@ -172,5 +172,7 @@
     </div>
     <!-- custome js file link -->
     <script src="search-res.js"></script>
+    <!--Information Processing-->
+    <script src="booking-confirm.js"></script>
   </body>
 </html>
