--- a/checkin.html
+++ b/checkin.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <div id="menu-bar" class="fas fa-person-walking-luggage"></div>
+      <div id="menu-bar" class="fas fa-bars"></div>
       <a href="index.html" class="logo">
         <img src="img/logo.jpg" />
         CiTravel
@@ -50,7 +50,7 @@
     <!--Reservation-->
     <section class="title">
       <h2>Grand Deluxe Suite</h2>
-      <p>3 nights</p>
+      <p id="nights">3 nights</p>
     </section>
     <p class="location">
       <i class="fa-solid fa-location-dot"></i>&nbsp;&nbsp;Discovery Wondersworld
@@ -59,31 +59,34 @@
 
     <!--Info-->
     <section class="info">
-      <div class="arrival">
+      <div>
         <h3>Arrival</h3>
-        <p>Wed, 08 Jun 2022</p>
+        <p id="arrival"></p>
       </div>
-      <div class="departure">
+      <div>
         <h3>Departure</h3>
-        <p>Sat, 11 Jun 2022</p>
+        <p id="departure">Sat, 11 Jun 2022</p>
       </div>
-      <div class="guest">
+      <div>
         <h3>Guest</h3>
-        <p>3 Adults</p>
+        <p id="guestNum">3 Adults</p>
       </div>
-      <div class="status">
+      <div>
         <h3>Status</h3>
-        <div class="reserved"><p>Reserved</p></div>
+        <div id="bg-status"><p id="status">Reserved</p></div>
       </div>
     </section>
 
     <!--Button-->
     <section>
       <a href="select-checkin.html"
-        ><button class="checkin_btn">Check in online</button></a
+        ><button class="checkin_btn" id="checkin">Check in online</button></a
       >
     </section>
     <!-- custome js file link -->
     <script src="checkin.js"></script>
+    <!--Information Processing-->
+    <script src="booking-confirm.js"></script>
+    <script src="client-info.js"></script>
   </body>
 </html>
