--- a/select-checkin.html
+++ b/select-checkin.html
@@ -48,7 +48,7 @@
     <section class="checkin_selection" id="checkinSelection">
       <h2 class="title">Select guest(s) to check in</h2>
       <p class="label">Main Guest</p>
-      <button class="checkbox">
+      <button class="checkbox" id="mainBox">
         <p class="name" id="mainGuest">Tam Le</p>
         <p class="status">Verified</p>
       </button>
