--- a/select-checkin.html
+++ b/select-checkin.html
@@ -49,8 +49,11 @@
       <h2 class="title">Select guest(s) to check in</h2>
       <p class="label">Main Guest</p>
       <button class="checkbox" id="mainBox">
-        <p class="name" id="mainGuest">Tam Le</p>
-        <p class="status">Verified</p>
+        <div class="guest_info">
+          <p class="name" id="mainGuest">Tam Le</p>
+          <p class="status">Verified</p>
+        </div>
+        <i class="fa-solid fa-circle-check"></i>
       </button>
       <p class="label">Additional Guest</p>
 
