--- a/pages/check-in/checkin.html
+++ b/pages/check-in/checkin.html
@@ -12,18 +12,18 @@
     />
 
     <!--custom css-->
-    <link rel="stylesheet" href="checkin.css" />
+    <link rel="stylesheet" href="localCss/checkin.css" />
   </head>
   <body>
     <header>
       <div id="menu-bar" class="fas fa-bars"></div>
-      <a href="index.html" class="logo">
-        <img src="img/logo.jpg" />
+      <a href="../index/index.html" class="logo">
+        <img src="../../img/logo.jpg" />
         CiTravel
       </a>
       <nav class="navbar">
-        <a href="index.html" class="logonav">
-          <img src="img/logonav.jpg" />CiTravel</a
+        <a href="../index/index.html" class="logonav">
+          <img src="../../img/logonav.jpg" />CiTravel</a
         >
         <a href="search-res.html">Check in</a>
         <a href="#specialoffers">Special Offers</a>
@@ -36,7 +36,7 @@
         </div>
       </nav>
       <div class="language">
-        <img src="img/18.jpg" alt="" />
+        <img src="../../img/18.jpg" alt="" />
         <i class="fa-solid fa-angle-down"></i>
       </div>
     </header>
@@ -45,7 +45,7 @@
     <h1 class="pagetitle">Online check in</h1>
 
     <!--Image-->
-    <img src="img/16.jpg" class="img_title" />
+    <img src="../../img/16.jpg" class="img_title" />
 
     <!--Reservation-->
     <section class="title">
@@ -84,9 +84,10 @@
       >
     </section>
     <!-- custome js file link -->
-    <script src="checkin.js"></script>
+    <script src="../../global/mobileNav.js"></script>
+    <script src="localJs/toggleLanguage.js"></script>
     <!--Information Processing-->
-    <script src="booking-confirm.js"></script>
-    <script src="client-info.js"></script>
+    <script src="../../global/booking-confirm.js"></script>
+    <script src="../../global/client-info.js"></script>
   </body>
 </html>
