--- a/pages/check-in/select-checkin.html
+++ b/pages/check-in/select-checkin.html
@@ -12,18 +12,18 @@
     />
 
     <!--custom css-->
-    <link rel="stylesheet" href="checkin.css" />
+    <link rel="stylesheet" href="localCss/checkin.css" />
   </head>
   <body>
     <header>
       <div id="menu-bar" class="fas fa-bars"></div>
-      <a href="index.html" class="logo">
-        <img src="img/logo.jpg" />
+      <a href="../index/index.html" class="logo">
+        <img src="../../img/logo.jpg" />
         CiTravel
       </a>
       <nav class="navbar">
         <a href="index.html" class="logonav">
-          <img src="img/logonav.jpg" />CiTravel</a
+          <img src="../../img/logonav.jpg" />CiTravel</a
         >
         <a href="search-res.html">Check in</a>
         <a href="#specialoffers">Special Offers</a>
@@ -36,7 +36,7 @@
         </div>
       </nav>
       <div class="language">
-        <img src="img/18.jpg" alt="" />
+        <img src="../../img/18.jpg" alt="" />
         <i class="fa-solid fa-angle-down"></i>
       </div>
     </header>
@@ -83,14 +83,15 @@
 
     <!--Button-->
     <section>
-      <a href="select-checkin.html"
+      <a href="../arrivalTime/arrivalTime.html"
         ><button class="checkin_btn">Check in online</button></a
       >
     </section>
 
     <!-- custome js file link -->
-    <script src="checkin.js"></script>
+    <script src="../../global/mobileNav.js"></script>
+    <script src="localJs/toggleLanguage.js"></script>
     <!--Booking Confirmation-->
-    <script src="select-checkin.js"></script>
+    <script src="localJs/select-checkin.js"></script>
   </body>
 </html>
