--- a/pages/arrivalTime/arrivalTime.html
+++ b/pages/arrivalTime/arrivalTime.html
@@ -12,7 +12,45 @@
     />
 
     <!--custom css-->
-    <link rel="stylesheet" href="arrivalTime.css" />
+    <link
+      rel="stylesheet"
+      href="../../global/mobileNav.css"
+      <link
+      rel="stylesheet"
+      href="arrivalTime.css"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div id="menu-bar" class="fas fa-bars"></div>
+      <a href="../index/index.html" class="logo">
+        <img src="../../img/logo.jpg" />
+        CiTravel
+      </a>
+      <nav class="navbar">
+        <a href="../index/index.html" class="logonav">
+          <img src="../../img/logonav.jpg" />CiTravel</a
+        >
+        <a href="../search-res/search-res.html">Check in</a>
+        <a href="#specialoffers">Special Offers</a>
+        <a href="#justforyou">Just For You</a>
+        <a href="#login" class="login">Login</a>
+
+        <div class="social">
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+      </nav>
+      <div class="language">
+        <img src="../../img/18.jpg" alt="" />
+        <i class="fa-solid fa-angle-down"></i>
+      </div>
+    </header>
+
+    <!--Page Title-->
+    <h1 class="pagetitle">Online check in</h1>
+    <!-- custome js file link -->
+    <script src="../../global/mobileNav.js"></script>
+    <script src="../../global/toggleLanguage.js"></script>
+  </body>
 </html>
