--- a/pages/check-in/checkin.html
+++ b/pages/check-in/checkin.html
@@ -25,7 +25,7 @@
         <a href="../index/index.html" class="logonav">
           <img src="../../img/logonav.jpg" />CiTravel</a
         >
-        <a href="search-res.html">Check in</a>
+        <a href="../search-res/search-res.html">Check in</a>
         <a href="#specialoffers">Special Offers</a>
         <a href="#justforyou">Just For You</a>
         <a href="#login" class="login">Login</a>
@@ -85,7 +85,7 @@
     </section>
     <!-- custome js file link -->
     <script src="../../global/mobileNav.js"></script>
-    <script src="localJs/toggleLanguage.js"></script>
+    <script src="../../global/toggleLanguage.js"></script>
     <!--Information Processing-->
     <script src="../../global/booking-confirm.js"></script>
     <script src="../../global/client-info.js"></script>
