--- a/pages/check-in/select-checkin.html
+++ b/pages/check-in/select-checkin.html
@@ -22,10 +22,10 @@
         CiTravel
       </a>
       <nav class="navbar">
-        <a href="index.html" class="logonav">
+        <a href="../index/index.html" class="logonav">
           <img src="../../img/logonav.jpg" />CiTravel</a
         >
-        <a href="search-res.html">Check in</a>
+        <a href="../search-res/search-res.html">Check in</a>
         <a href="#specialoffers">Special Offers</a>
         <a href="#justforyou">Just For You</a>
         <a href="#login" class="login">Login</a>
@@ -90,7 +90,7 @@
 
     <!-- custome js file link -->
     <script src="../../global/mobileNav.js"></script>
-    <script src="localJs/toggleLanguage.js"></script>
+    <script src="../../global/toggleLanguage.js"></script>
     <!--Booking Confirmation-->
     <script src="localJs/select-checkin.js"></script>
   </body>
