--- a/pages/search-res/search-res.html
+++ b/pages/search-res/search-res.html
@@ -26,7 +26,7 @@
         <a href="../index/index.html" class="logonav">
           <img src="../../img/logonav.jpg" />CiTravel</a
         >
-        <a href="search-res.html">Check in</a>
+        <a href="../search-res/search-res.html">Check in</a>
         <a href="#specialoffers">Special Offers</a>
         <a href="#justforyou">Just For You</a>
         <a href="#login" class="login">Login</a>
