--- a/pages/arrivalTime/arrivalTime.html
+++ b/pages/arrivalTime/arrivalTime.html
@@ -12,23 +12,18 @@
     />
 
     <!--custom css-->
-    <link
-      rel="stylesheet"
-      href="../../global/mobileNav.css"
-      <link
-      rel="stylesheet"
-      href="arrivalTime.css"
-    />
+    <link rel="stylesheet" href="../../global/mobileNav.css" />
+    <link rel="stylesheet" href="localCss/arrivalTime.css" />
   </head>
   <body>
     <header>
       <div id="menu-bar" class="fas fa-bars"></div>
-      <a href="../index/index.html" class="logo">
+      <a href="../../index.html" class="logo">
         <img src="../../img/logo.jpg" />
         CiTravel
       </a>
       <nav class="navbar">
-        <a href="../index/index.html" class="logonav">
+        <a href="../../index.html" class="logonav">
           <img src="../../img/logonav.jpg" />CiTravel</a
         >
         <a href="../search-res/search-res.html">Check in</a>
@@ -49,6 +44,14 @@
 
     <!--Page Title-->
     <h1 class="pagetitle">Online check in</h1>
+
+    <section>
+      <div class="formTitle">
+        <h2>Select Arrival Time</h2>
+        <p>Step 1 of 3</p>
+      </div>
+    </section>
+
     <!-- custome js file link -->
     <script src="../../global/mobileNav.js"></script>
     <script src="../../global/toggleLanguage.js"></script>
