--- a/pages/check-in/checkin.html
+++ b/pages/check-in/checkin.html
@@ -13,16 +13,17 @@
 
     <!--custom css-->
     <link rel="stylesheet" href="localCss/checkin.css" />
+    <link rel="stylesheet" href="../../global/mobileNav.css " />
   </head>
   <body>
     <header>
       <div id="menu-bar" class="fas fa-bars"></div>
-      <a href="../index/index.html" class="logo">
+      <a href="../../index.html" class="logo">
         <img src="../../img/logo.jpg" />
         CiTravel
       </a>
       <nav class="navbar">
-        <a href="../index/index.html" class="logonav">
+        <a href="../../index.html" class="logonav">
           <img src="../../img/logonav.jpg" />CiTravel</a
         >
         <a href="../search-res/search-res.html">Check in</a>
@@ -88,6 +89,6 @@
     <script src="../../global/toggleLanguage.js"></script>
     <!--Information Processing-->
     <script src="../../global/booking-confirm.js"></script>
-    <script src="../../global/client-info.js"></script>
+    <script src="localJs/client-info.js"></script>
   </body>
 </html>
