--- a/pages/search-res/search-res.html
+++ b/pages/search-res/search-res.html
@@ -18,12 +18,12 @@
     <!--header section-->
     <header>
       <div id="menu-bar" class="fas fa-bars"></div>
-      <a href="../index/index.html" class="logo">
+      <a href="../../index.html" class="logo">
         <img src="../../img/logo.jpg" />
         CiTravel
       </a>
       <nav class="navbar">
-        <a href="../index/index.html" class="logonav">
+        <a href="../../index.html" class="logonav">
           <img src="../../img/logonav.jpg" />CiTravel</a
         >
         <a href="../search-res/search-res.html">Check in</a>
