--- a/pages/arrivalTime/arrivalTime.html
+++ b/pages/arrivalTime/arrivalTime.html
@@ -50,6 +50,18 @@
         <h2>Select Arrival Time</h2>
         <p>Step 1 of 3</p>
       </div>
+      <form action="">
+        <label for="arrivalDate">Arrival Date</label>
+        <input
+          type="text"
+          id="arrivalDate"
+          placeholder="08 Jun 2022"
+          disabled="disabled"
+        />
+        <label for="arrivalTime">Arrival Time <span>*</span></label>
+        <input type="time" id="arrivalTime" min="14:00" max="23:59" required />
+        <input type="submit" class="btn" value="Continue" />
+      </form>
     </section>
 
     <!-- custome js file link -->
