--- a/pages/arrivalTime/arrivalTime.html
+++ b/pages/arrivalTime/arrivalTime.html
@@ -50,7 +50,7 @@
         <h2>Select Arrival Time</h2>
         <p>Step 1 of 3</p>
       </div>
-      <form action="">
+      <form action="../idSubmit/idSubmit.html">
         <label for="arrivalDate">Arrival Date</label>
         <input
           type="text"
@@ -67,5 +67,6 @@
     <!-- custome js file link -->
     <script src="../../global/mobileNav.js"></script>
     <script src="../../global/toggleLanguage.js"></script>
+    <script src="localJs/arrivalTime.js"></script>
   </body>
 </html>
