--- a/pages/idSubmit/idSubmit.html
+++ b/pages/idSubmit/idSubmit.html
@@ -109,8 +109,39 @@
         </select>
         <label for="documentNum">Document Number <span>*</span></label>
         <input type="text" id="documentNum" required />
+
         <label for="idSubmission">Verify Information <span>*</span></label>
-        <input type="file" id="idSubmission" capture="user" accept="image/*" />
+        <input
+          type="file"
+          id="idSubmission"
+          capture="user"
+          accept="image/*"
+          style="display: none"
+        />
+        <div class="captureBox">
+          <input
+            type="button"
+            id="loadId"
+            value="📷"
+            onclick="document.getElementById('idSubmission').click();"
+          />
+
+          <input
+            type="button"
+            id="loadId"
+            value="📷"
+            onclick="document.getElementById('idSubmission').click();"
+          />
+        </div>
+        <label for="dob">Date of Birth</label>
+        <input type="date" name="dob" id="dob" />
+        <label for="nationality">Nationality</label>
+        <input
+          type="text"
+          name="nationality"
+          id="nationality"
+          style="text-transform: capitalize"
+        />
         <input type="submit" class="btn" value="Continue" />
       </form>
     </section>
