--- a/pages/idSubmit/idSubmit.html
+++ b/pages/idSubmit/idSubmit.html
@@ -77,7 +77,7 @@
         />
         <div class="phoneBox">
           <div class="codeInput">
-            <label for="code">Code <span>*</span></label>
+            <label for="code">Code</label>
             <!--<input
               list="codes"
               id="code"
@@ -97,7 +97,7 @@
             </select>
           </div>
           <div class="phoneInput">
-            <label for="phone">Phone <span>*</span></label>
+            <label for="phone">Phone</label>
             <input type="tel" id="phone" required />
           </div>
         </div>
