--- a/pages/check-in/select-checkin.html
+++ b/pages/check-in/select-checkin.html
@@ -85,7 +85,9 @@
     <!--Button-->
     <section>
       <a href="../arrivalTime/arrivalTime.html"
-        ><button class="checkin_btn">Check in online</button></a
+        ><button class="checkin_btn" onclick="getGuest()">
+          Check in online
+        </button></a
       >
     </section>
 
