--- a/pages/arrivalTime/arrivalTime.html
+++ b/pages/arrivalTime/arrivalTime.html
@@ -48,7 +48,7 @@
     <section>
       <div class="formTitle">
         <h2>Select Arrival Time</h2>
-        <p>Step 1 of 3</p>
+        <p id="steps">Step 1 of 3</p>
       </div>
       <form action="../idSubmit/idSubmit.html">
         <label for="arrivalDate">Arrival Date</label>
