--- a/pages/idSubmit/idSubmit.html
+++ b/pages/idSubmit/idSubmit.html
@@ -14,6 +14,7 @@
     <!--custom css-->
     <link rel="stylesheet" href="../../global/mobileNav.css" />
     <link rel="stylesheet" href="localCss/idSubmit.css" />
+    <script src="https://unpkg.com/tesseract.js@v2.1.0/dist/tesseract.min.js"></script>
   </head>
   <body>
     <header>
