--- a/pages/idSubmit/idSubmit.html
+++ b/pages/idSubmit/idSubmit.html
@@ -48,11 +48,11 @@
 
     <section>
       <div class="formTitle">
-        <h2>Additional Guest 1</h2>
+        <h2 id="guestType">Additional Guest 1</h2>
         <p id="steps">Step 2 of 3</p>
       </div>
 
-      <form onsubmit="continueCheckin()">
+      <form onsubmit="continueCheckin()" action="#">
         <label for="firstName">First Name <span>*</span></label>
         <input
           type="text"
