--- a/pages/idSubmit/idSubmit.html
+++ b/pages/idSubmit/idSubmit.html
@@ -119,7 +119,7 @@
             <input
               type="file"
               id="idSubmission1"
-              capture="user"
+              capture="environment"
               accept="image/*"
               style="display: none"
               required
@@ -136,7 +136,7 @@
             <input
               type="file"
               id="idSubmission2"
-              capture="user"
+              capture="environment"
               accept="image/*"
               style="display: none"
               required
