--- a/pages/idSubmit/idSubmit.html
+++ b/pages/idSubmit/idSubmit.html
@@ -110,7 +110,12 @@
           <option value="Birth">Birth Certificate</option>
         </select>
         <label for="documentNum">Document Number <span>*</span></label>
-        <input type="text" id="documentNum" required />
+        <input
+          type="text"
+          id="documentNum"
+          style="text-transform: uppercase"
+          required
+        />
 
         <label for="idSubmission">Verify Information <span>*</span></label>
         <div id="captureBox">
