--- a/pages/idSubmit/idSubmit.html
+++ b/pages/idSubmit/idSubmit.html
@@ -156,6 +156,7 @@
         </div>
         <label for="dob">Date of Birth</label>
         <input type="date" name="dob" id="dob" />
+        <input type="text" name="dobDisplay" id="dobDisplay" />
         <label for="nationality">Nationality</label>
         <input
           type="text"
@@ -171,5 +172,41 @@
     <script src="../../global/mobileNav.js"></script>
     <script src="../../global/toggleLanguage.js"></script>
     <script src="localJs/idSubmit.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-2.2.3.min.js"
+      integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+      integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/js/bootstrap-datepicker.min.js"
+    ></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.1/css/bootstrap-datepicker3.min.css"
+    />
+    <script>
+      $(document).ready(function () {
+        $("#dob").datepicker({
+          format: "yyyy-mm-dd",
+        });
+        $("#dob").on("change", function () {
+          var fromdate = $(this).val();
+          alert(fromdate);
+        });
+      });
+    </script>
   </body>
 </html>
