--- a/pages/idSubmit/idSubmit.html
+++ b/pages/idSubmit/idSubmit.html
@@ -161,6 +161,7 @@
           type="text"
           onfocus="(this.type='date')"
           onblur="(this.type='text')"
+          onchange="(this.type='text')"
           id="dob"
         />
 
@@ -169,7 +170,7 @@
           type="text"
           name="nationality"
           id="nationality"
-          value="Viet Nam"
+          placeholder="Viet Nam"
           disabled="disabled"
           style="text-transform: capitalize"
         />
